files sort fix